changed background to a secure background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(http://cache.gawker.com/assets/images/lifehacker/2011/06/vintage-rainbow-color-badge.png);
+	background-color: #E0FFFF;
 }
 
 
